Persistence config + mvn dependencies + minor changes